syntax = "proto3";

import "google/protobuf/timestamp.proto";

package NUgc.NSchema;

message TReactionStatus {
    string Id = 1;
    google.protobuf.Timestamp CreateTime = 2;
    bool Fraud = 3;
}

message TUserReaction {
    string Id = 1;
    google.protobuf.Timestamp CreateTime = 2;
    string ParentId = 3;
    bool Processing = 4;
    oneof LikeDislike {
        bool Like = 100;
        bool Dislike = 101;
        bool Haha = 102;
        bool Wow = 103;
        bool Bored = 104;
        bool Sad = 105;
        bool Angry = 106;
        bool Heart = 107;
        bool Skip = 108;
        bool Fire = 109;
    }
}

message TReactionAggregate {
    string Id = 1;
    google.protobuf.Timestamp UpdateTime = 2;
    string ParentId = 3;
    int64 LikeCount = 100;
    int64 DislikeCount = 101;
    int64 HahaCount = 102;
    int64 WowCount = 103;
    int64 BoredCount = 104;
    int64 SadCount = 105;
    int64 AngryCount = 106;
    int64 HeartCount = 107;
    int64 SkipCount = 108;
    int64 FireCount = 109;
}
